--- a/Haring_client/package.json
+++ b/Haring_client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.10",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
